...
            </objects>
            <point key="canvasLocation" x="2176.8000000000002" y="1820.2398800599701"/>
        </scene>
        <!--Магазины-->
        <scene sceneID="QCK-87-28k">
            <objects>
                <viewController storyboardIdentifier="DShopsViewController" title="Магазины" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mdc-B2-pAg" customClass="DParentShopsViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Wv3-Bn-ZYp"/>
                        <viewControllerLayoutGuide type="bottom" id="h5V-hh-Ig5"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="nxb-as-AIm">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
            </objects>
            <point key="canvasLocation" x="4190" y="888"/>
        </scene>
        <!--Все дисконты-->
        <scene sceneID="Mkg-FZ-EqX">
            <objects>
                <viewController storyboardIdentifier="MVVMCategoryViewController" title="Все дисконты" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nfN-s5-zDj" customClass="MVVMCategoryViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="5Lt-CI-EBk"/>
                        <viewControllerLayoutGuide type="bottom" id="ozm-x5-421"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="M8y-dz-RiK">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                            <constraint firstItem="uGm-jM-wLj" firstAttribute="centerX" secondItem="M8y-dz-RiK" secondAttribute="centerX" id="iTx-nn-uVc"/>
                            <constraint firstItem="uGm-jM-wLj" firstAttribute="centerY" secondItem="M8y-dz-RiK" secondAttribute="centerY" id="m0o-ZE-fnT"/>
                            <constraint firstItem="uGm-jM-wLj" firstAttribute="width" secondItem="M8y-dz-RiK" secondAttribute="width" id="nlV-PZ-SRI"/>
                            <constraint firstItem="uGm-jM-wLj" firstAttribute="height" secondItem="M8y-dz-RiK" secondAttribute="height" id="w38-fV-NRd"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Дисконты" id="qpz-IT-wqO">
                        <rightBarButtonItems>
                            <barButtonItem title="Item" style="plain" id="2pz-Ct-YOL">
                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Vhk-O8-hfX">
                                    <rect key="frame" x="330" y="7.5" width="29" height="29"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <state key="normal" image="rightMenu"/>
...
            <point key="canvasLocation" x="-1548" y="-94"/>
        </scene>
        <!--Кошелек-->
        <scene sceneID="0C9-MD-eRc">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1yh-65-xEE" customClass="DCategoryNavController" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Кошелек" image="cash" selectedImage="cash" id="hSx-6j-Hxi"/>
                    <toolbarItems/>
                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0CR-Sd-3IJ">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <constraint firstItem="zMy-Uy-NIS" firstAttribute="width" secondItem="bOH-0I-Tsm" secondAttribute="width" id="1mY-eC-G6Y"/>
                            <constraint firstItem="zMy-Uy-NIS" firstAttribute="centerY" secondItem="bOH-0I-Tsm" secondAttribute="centerY" id="MBU-Fd-elX"/>
                            <constraint firstItem="zMy-Uy-NIS" firstAttribute="centerX" secondItem="bOH-0I-Tsm" secondAttribute="centerX" id="P7S-cX-5U5"/>
                            <constraint firstItem="zMy-Uy-NIS" firstAttribute="height" secondItem="bOH-0I-Tsm" secondAttribute="height" id="Xja-Cu-ze9"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Акции" id="eQK-he-IiH">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="ipC-Ul-KDS">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="BFv-70-RHf">
                                <rect key="frame" x="330" y="7.5" width="29" height="29"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="rightMenu"/>
                                <connections>
...
            <point key="canvasLocation" x="566" y="1026"/>
        </scene>
        <!--Купоны-->
        <scene sceneID="Xjl-cO-vHA">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="I2C-lZ-L8f" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Купоны" image="coup" id="DfO-rs-v8n"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ejI-wB-39K">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
