...
    
    self.cellArray = @[];
    UITableView *tableView = [self getTableViewFromController:controller];
    self.controller = controller;
    controller.navigationController.navigationBarHidden = NO;
    controller.navigationController.navigationBar.translucent = NO;
    UIBarButtonItem *rightButton = [[UIBarButtonItem alloc] initWithTitle:@"Далее" style:UIBarButtonItemStylePlain target:self action:@selector(doneAction)];
    controller.navigationItem.rightBarButtonItem = rightButton;
    
    UIBarButtonItem *back = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"back"] style:UIBarButtonItemStylePlain target:self action:@selector(back)];
        controller.navigationItem.leftBarButtonItem = back;
    
    _label = [self getLabelFromController:controller];
...
            self.cellArray = @[emailCell];
            
            [_label setText:footerEmailText];
        }
            break;
        case enumPassword:{
            UIBarButtonItem *rightButton = [[UIBarButtonItem alloc] initWithTitle:@"Готово" style:UIBarButtonItemStylePlain target:self action:@selector(doneAction)];
            controller.navigationItem.rightBarButtonItem = rightButton;
           
            
            DUserDataViewCell *one = [DUserDataViewCell getCellForTableView:tableView andClassCellString:NSStringFromClass([DUserDataViewCell class])];
            [self addTextFieldToCell:one withPlaceholder:plaseHolderPass];
            DUserDataViewCell *two = [DUserDataViewCell getCellForTableView:tableView andClassCellString:NSStringFromClass([DUserDataViewCell class])];
...
}

- (BOOL)validPassword{
    
    if (![self.password isEqualToString:self.confermPassword]) {
        
        [[[UIAlertView alloc] initWithTitle:@"Пароли не совпадают" message:nil delegate:nil cancelButtonTitle:@"OK" otherButtonTitles: nil] show];
        return NO;
    }else if (self.password.length < 3 || self.confermPassword.length < 3){
        
        [[[UIAlertView alloc] initWithTitle:@"Пароли должны быть длиннее трех сиволов" message:nil delegate:nil cancelButtonTitle:@"OK" otherButtonTitles: nil] show];
        return NO;
    }else{
...
