...
                             initWithImage:[UIImage imageNamed:@"back"]
                             style:UIBarButtonItemStylePlain target:self action:@selector(back)];
    self.title = photoControllerTitle;
    
    self.rghtButton = [[UIBarButtonItem alloc] initWithTitle:textChange style:UIBarButtonItemStylePlain target:self action:@selector(editer)];
//    self.cameraButton = [[UIBarButtonItem alloc]
//                         initWithImage:[UIImage imageNamed:@"takePhoto"]
//                         style:UIBarButtonItemStylePlain target:self action:@selector(camera)];
    
    [self.navigationItem setLeftBarButtonItems:@[back]];
    self.navigationItem.rightBarButtonItem = self.rghtButton;
    [self.rghtButton setEnabled:self.imageArray.count];
    
...
    }
    return productsDict;
}

- (IBAction)deleteLastPhoto:(id)sender {
    
    [[[UIAlertView alloc] initWithTitle:@"" message:textDeletePhotoAlert delegate:self cancelButtonTitle:@"Нет" otherButtonTitles:@"Удалить", nil] show];

}

- (IBAction)sendToServer:(id)sender {
    
    [self send];
...
