...
        }
    }];
}

- (void)discardeChangePhonecallBack:(void (^)(NSInteger status))status{

    [[NetworkManeger sharedManager] sendPostRequestToServerWithDictionary:@{@"id":@(self.veryFaryCode)} andAPICall:@"/users/change/delete" withCallBack:^(BOOL success, NSDictionary *resault) {
        
        if (success) {
            
            status(0);
        } else {
            
...
